samples/_failures_safe/1761441407_5f1e4c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_265d512c.c: In function ‘find_shortest_path’:
./samples/SAFE/__tmp_265d512c.c:141:5: error: expected declaration or statement at end of input
  141 |     }
      |     ^
